welcome.lessons.welcome.bat.bool2.In1To10.scala.error
in1To10:2: error: not found: value outsidemode
  if ((outsidemode==false)&&(n<1||n>10)){
       ^in1To10:5: error: not found: value outsidemode
  if ((outsidemode==true)&&(n>=1)&&(n<=10)){
       ^